--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,6 @@
 html {
   overflow: hidden;
   height: 100dvh;
-  height: -webkit-fill-available;
   width: 100%;
 }
 
@@ -105,7 +104,6 @@ body {
   display: flex;
   min-width: 320px;
   height: 100dvh;
-  height: -webkit-fill-available;
   background-color: var(--bg-color);
   color: var(--text-main);
   overflow: hidden;
@@ -115,7 +113,6 @@ body {
 
 #root {
   height: 100dvh;
-  height: -webkit-fill-available;
   width: 100%;
   position: relative;
   background-color: var(--bg-color);
@@ -127,7 +124,6 @@ body {
 .mobile-app-wrapper {
   width: 100%;
   height: 100dvh;
-  height: -webkit-fill-available;
   position: relative;
   background-color: var(--bg-color);
   display: flex;
